# micro-api/src/main/java/mabubu0203/com/github/catcafe/api/controller/frequently/asked/question/mapper/response/FrequentlyAskedQuestionFindResponseMapper.java
@@ -3,18 +3,22 @@ package mabubu0203.com.github.catcafe.api.controller.frequently.asked.question.m
 import mabubu0203.com.github.catcafe.api.service.frequently.asked.question.model.output.FrequentlyAskedQuestionSearchServiceOutput;
 import mabubu0203.com.github.catcafe.common.controller.mapper.response.FindResponseMapper;
 import org.openapitools.model.FrequentlyAskedQuestionDetail;
+import org.openapitools.model.FrequentlyAskedQuestionFindResponse;
 
-public class FrequentlyAskedQuestionFindResponseMapper implements FindResponseMapper<FrequentlyAskedQuestionSearchServiceOutput, FrequentlyAskedQuestionDetail> {
+public class FrequentlyAskedQuestionFindResponseMapper implements FindResponseMapper<FrequentlyAskedQuestionSearchServiceOutput, FrequentlyAskedQuestionFindResponse> {
 
     @Override
-    public FrequentlyAskedQuestionDetail apply(FrequentlyAskedQuestionSearchServiceOutput frequentlyAskedQuestionSearchServiceOutput) {
+    public FrequentlyAskedQuestionFindResponse apply(FrequentlyAskedQuestionSearchServiceOutput frequentlyAskedQuestionSearchServiceOutput) {
         return this.search();
     }
 
-    FrequentlyAskedQuestionDetail search() {
+    private FrequentlyAskedQuestionFindResponse search() {
         var detail = new FrequentlyAskedQuestionDetail();
         detail.setId(1L);
-        return detail;
+
+        var result = new FrequentlyAskedQuestionFindResponse();
+        result.setFrequentlyAskedQuestion(detail);
+        return result;
     }
 
 }
