# micro-api/src/main/java/mabubu0203/com/github/catcafe/api/controller/frequently/asked/question/mapper/response/FrequentlyAskedQuestionSearchResponseMapper.java
@@ -3,24 +3,22 @@ package mabubu0203.com.github.catcafe.api.controller.frequently.asked.question.m
 import mabubu0203.com.github.catcafe.api.service.frequently.asked.question.model.output.FrequentlyAskedQuestionSearchServiceOutput;
 import mabubu0203.com.github.catcafe.common.controller.mapper.response.SearchResponseMapper;
 import org.openapitools.model.FrequentlyAskedQuestionDetail;
+import org.openapitools.model.FrequentlyAskedQuestionSearchResponse;
 
-import java.util.ArrayList;
-import java.util.List;
-
-public class FrequentlyAskedQuestionSearchResponseMapper implements SearchResponseMapper<FrequentlyAskedQuestionSearchServiceOutput, List<FrequentlyAskedQuestionDetail>> {
+public class FrequentlyAskedQuestionSearchResponseMapper implements SearchResponseMapper<FrequentlyAskedQuestionSearchServiceOutput, FrequentlyAskedQuestionSearchResponse> {
 
     @Override
-    public List<FrequentlyAskedQuestionDetail> apply(FrequentlyAskedQuestionSearchServiceOutput frequentlyAskedQuestionSearchServiceOutput) {
+    public FrequentlyAskedQuestionSearchResponse apply(FrequentlyAskedQuestionSearchServiceOutput frequentlyAskedQuestionSearchServiceOutput) {
         return this.search();
     }
 
-    List<FrequentlyAskedQuestionDetail> search() {
-        var resultRest = new ArrayList<FrequentlyAskedQuestionDetail>();
+    private FrequentlyAskedQuestionSearchResponse search() {
         var detail = new FrequentlyAskedQuestionDetail();
         detail.setId(1L);
-        resultRest.add(detail);
 
-        return resultRest;
+        var result = new FrequentlyAskedQuestionSearchResponse();
+        result.addFrequentlyAskedQuestionsItem(detail);
+        return result;
     }
 
 }
